# Jaxie

./: CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  README_building.md  README_docker.md
.devcontainer/: Dockerfile  Dockerfile.jetson
.github/: constants.env
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/Jaxie/: sample_library.hpp
include/Jaxie/audio/: capture.hpp
include/Jaxie/onnx/: streaming_rnnt.hpp
scripts/: build_docker.ps1  build_docker.sh  build_onnxruntime_trt_jetson.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/audio/: CMakeLists.txt  capture.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/onnx/: CMakeLists.txt  streaming_rnnt.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  audio_capture_tests.cpp  constexpr_tests.cpp  tests.cpp
todo/: Taskbreakdowns.md
